--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,32 @@
-# core modules
-pandas
-numpy
-matplotlib
-seaborn
-IPython
-requests
+# Core data science packages
+pandas>=1.5.0
+numpy>=1.21.0
+
+# Machine learning packages
+scikit-learn>=1.1.0
+xgboost>=1.6.0
+lightgbm>=3.3.0
+
+# Visualization packages
+matplotlib>=3.5.0
+seaborn>=0.11.0
+plotly>=5.0.0
+
+# Statistical analysis
+scipy>=1.9.0
+statsmodels>=0.13.0
+
+# Jupyter and development
+IPython>=8.0.0
+jupyter>=1.0.0
+notebook>=6.4.0
+
+# Data processing and utilities
+requests>=2.28.0
+tqdm>=4.64.0
+joblib>=1.1.0
+yfinance>=0.2.0
+
+# Optional: Deep learning (uncomment if needed)
+# torch>=1.12.0
+# tensorflow>=2.9.0
